--- a/src/components/viewer/RegistrySelection.css
+++ b/src/components/viewer/RegistrySelection.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   height: 100%;
+  background-color: var(--rcv-registry-selection-background-color);
 }
 
 .rcv-registry-selection-tab {
